Adjusted toggle button sizes to prevent clipping

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,12 +210,12 @@ form label {
 }
 
 .toggle-button {
-  width: 140px;
+  width: 120px;
   background-color: #f0f4ef;
   border: 1px solid #69788c;
   height: 34px;
   color: #344966;
-  font-size: 16px;
+  font-size: 15px;
   border-radius: 5px;
   margin: 10px;
   transition: 0.5s;
@@ -244,7 +244,7 @@ form label {
 
 .options {
   max-height: 0;
-  overflow: hidden;
+  overflow-y: hidden;
   transition: all 0.5s ease-in-out 0.2s;
 }
 
@@ -281,6 +281,10 @@ h5 {
   border-radius: 5px;
   padding: 5px;
   margin: 0.5rem auto;
+}
+
+.recipe-container:hover {
+  cursor: pointer;
 }
 
 .thumbnail {
